Add swagger docs through comments to signout, refresh token and profile methods.
